--- a/transitions/transitions.css
+++ b/transitions/transitions.css
@@ -1,29 +1,66 @@
-/* body {
-  display: flex;
+body {
+  /* display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-} */
+  height: 50vh; */
+  /* display: grid;
+  place-items: center;
+  height: 70vh;
+  position: relative; */
+}
 
 .ball {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   background-color: lightcoral;
-  transition-property: transform;
-  transition-duration: 2s;
-  transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
-  transition-delay: 0.25s;
+
+  /* transition-delay: 3s; */
   top: 0;
   bottom: 0;
   position: absolute;
 }
 
-/* 
 .ball:hover {
   display: block;
   border: 5px solid black;
   width: 300px;
   height: 300px;
-  transform: translate3d(150px, 100px);
+  transition-property: transform;
+  transition-duration: 5s;
+  transition-timing-function: ease-in-out;
+  /* transform: translate3d(150px, 100px); */
+}
+
+.box {
+  width: 200px;
+  height: 200px;
+  background-color: lightcoral;
+  border: 1px solid black;
+  border-radius: 15%;
+}
+
+/* .box2 {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background-color: lightgreen;
+  border: 1px solid black;
+  border-radius: 15%;
+  top: 10%;
+  left: 40%;
+  z-index: 1;
 } */
+.box:hover {
+  border-radius: 50%;
+  position: absolute;
+  background-color: brown;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0.25s;
+  top: 10%;
+  left: 40%;
+  z-index: 2;
+  transform: translateX(500px);
+}
