--- a/animations/animations.css
+++ b/animations/animations.css
@@ -1,8 +1,7 @@
 body {
-  display: grid;
-  place-items: center;
+  /* display: grid;
+  place-items: center; */
   height: 100vh;
-  position: relative;
 }
 
 .string-top {
@@ -11,7 +10,7 @@ body {
   transform: rotateX(90);
   z-index: 1;
 }
-.string-bottom {
+/* .string-bottom {
   margin-top: -200px;
   border: 1px solid;
   height: 300px;
@@ -36,7 +35,7 @@ body {
     background-color: lightcoral;
     transform: translateY(-150px);
   }
-}
+} */
 
 .anime {
   margin-top: -300px;
@@ -46,11 +45,12 @@ body {
   border-style: dotted;
   background-color: coral;
   animation-name: bounceIT;
-  animation-duration: 0.75s;
+  animation-duration: 2s;
   animation-timing-function: ease-out;
   animation-iteration-count: infinite;
-  animation-direction: alternate-reverse;
-  animation-fill-mode: both;
+  animation-direction: alternate;
+  /* animation-fill-mode: both; */
+  animation-play-state: running;
   z-index: 3;
 }
 
@@ -63,5 +63,52 @@ body {
   100% {
     background-color: lightcoral;
     transform: translateY(-200px);
+  }
+}
+
+.box-container {
+  border: 1px solid black;
+  width: 100%;
+  height: 30%;
+  animation-name: rotatingBox;
+  animation-duration: 8s;
+  animation-timing-function: ease-out;
+  animation-direction: normal;
+  animation-iteration-count: infinite;
+  position: relative;
+}
+
+.box {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  border-radius: 25%;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 5px;
+  border-style: solid;
+  background-color: coral;
+}
+
+@keyframes rotatingBox {
+  0% {
+    transform: translateX(20%);
+    /* background-color: aqua; */
+  }
+  20% {
+    transform: translateX(40%);
+    /* background-color: blue; */
+  }
+  40% {
+    transform: translateX(60%);
+    /* background-color: blueviolet; */
+  }
+  80% {
+    transform: translateX(80%);
+    /* background-color: brown; */
+  }
+  100% {
+    transform: translateX(0%);
   }
 }
